objects/ManuClub_Goal_Achieved__c/ManuClub_Goal_Achieved__c.object-meta.xml
<CustomObject>
    <label>ManuClub_Goal_Achieved</label>
    <nameField>
        <label>ManuClub_Goal_Achieved Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManuClub_Goal_Achieved</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>