objects/ManuClub_Goal_Achieved__c/fields/Achieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Date__c</fullName>
    <label>Achieved_Date</label>
    <type>DateTime</type>
</CustomField>