objects/ManuClub_Goal_Achieved__c/fields/Goal_ID__c.field-meta.xml
<CustomField>
    <fullName>Goal_ID__c</fullName>
    <label>Goal_ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>