objects/ManuClub_Goal_Achieved__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal_Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>