objects/ManuClub_Goal_Achieved__c/fields/Read_Date__c.field-meta.xml
<CustomField>
    <fullName>Read_Date__c</fullName>
    <label>Read_Date</label>
    <type>Date</type>
</CustomField>