objects/ManuClub_Goal_Achieved__c/fields/Read_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Read_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read_Indicator</label>
    <type>Checkbox</type>
</CustomField>