objects/ManuClub_Goal_Achieved__c/fields/Reward_ID__c.field-meta.xml
<CustomField>
    <fullName>Reward_ID__c</fullName>
    <label>Reward_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>